[GOHW-7]: interceptors added
